Revert "FIX : fixed minor CSS bug with overflow-x:hidden"
This reverts commit d1c8641214b56813bd69828284f10f5d68da175e.

--- a/frontend/src/app/features/home/floating-cards/floating-cards.component.scss
+++ b/frontend/src/app/features/home/floating-cards/floating-cards.component.scss
@@ -1,6 +1,6 @@
 .floating-container {
   position: relative;
-  width: 100vw;
+  width: 98vw;
   height: 100dvh;
   overflow: hidden;
   pointer-events: none;
