--- a/frontend/src/app/features/home/homepage/homepage.component.scss
+++ b/frontend/src/app/features/home/homepage/homepage.component.scss
@@ -56,7 +56,7 @@ section h2 {
 section.full-width {
   position: relative;
   margin-bottom: 30dvh;
-  width: 100vw;
+  width: 99vw;
   padding : 12dvh 0;
   & * {
     position: relative;
