--- a/frontend/src/global-styles/styles.scss
+++ b/frontend/src/global-styles/styles.scss
@@ -20,7 +20,6 @@ html {
 html,
 body {
   min-height: 100%;
-  overflow-x: hidden;
 }
 
 body {
